# src/routes/groupRoute.js
@@ -1,0 +1,11 @@
+import { Router } from "express";
+import { getAllGroupController, getGroupByIdController, createGroupController} from '../controllers/groupController'
+
+const router = Router();
+
+router.get("/", getAllGroupController);
+router.get("/:id", getGroupByIdController);
+router.post("/", createGroupController);
+
+
+export default router;
